<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mybloodapp.fruits">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tips"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tips1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tips2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="130dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tips4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tips5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="browser2"
        android:text="learn more"
        android:textColor="@color/red"
        android:background="@color/white"
        android:textSize="20dp" />


</LinearLayout>